# Sentinal-SRE

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
agents/: __init__.py  graph.py  nodes.py  state.py
app/: Dockerfile  main.py
mcp_server/: server.py
