[project]
name = "sentinal-sre"
version = "0.1.0"
description = "Autonomous SRE Engine — Multi-Agent MTTR Reduction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.9",
    "langsmith>=0.7.35",
    "mcp>=1.27.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.45.0",
]
